# ffzf

./: Cargo.toml  README.md
src/: entry.rs  error.rs  main.rs
